--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
             "display_name": "Members",
             "name": "members",
             "description": "Adds member lists to your website.",
+            "version": "2.1.2",
             "nameless_version": "^2.1"
         }
     },
