move to nameless repo

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "aberdeener/nameless-composer-module",
+    "name": "namelessmc/members",
     "type": "nameless-module",
     "authors": [
         {
