--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "namelessmc/members",
+    "name": "namelessmc/members-module",
     "type": "nameless-module",
     "authors": [
         {
