Force Packagist update

--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "type": "nameless-module",
     "authors": [
         {
-            "name": "Tadhg Boyle",
+            "name": "Tadhg Boyle!",
             "homepage": "https://github.com/tadhgboyle"
         }
     ],
